--- a/src/CommonUtilities/CommonUtilities.WPF.Controls/Styles/SystemMenuStyle.xaml
+++ b/src/CommonUtilities/CommonUtilities.WPF.Controls/Styles/SystemMenuStyle.xaml
@@ -1,8 +1,20 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:controls="clr-namespace:AnakinRaW.CommonUtilities.Wpf.Controls">
+                    xmlns:controls="clr-namespace:AnakinRaW.CommonUtilities.Wpf.Controls"
+                    xmlns:colors="clr-namespace:AnakinRaW.CommonUtilities.Wpf.Themes.Colors">
 
     <Style TargetType="{x:Type controls:SystemMenu}">
+        <Setter Property="Width" Value="34"/>
+        <Setter Property="Height" Value="32"/>
+        <Setter Property="Padding" Value="12,6,2,6"/>
+        <Setter Property="Source" Value="{Binding Icon, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"/>
+        <Setter Property="VectorIcon">
+            <Setter.Value>
+                <Binding Source="{x:Static Application.Current}" Path="VectorIcon"/>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="VerticalAlignment" Value="Top"/>
+        <Setter Property="VectorFill" Value="{DynamicResource {x:Static colors:WindowColors.MainWindowActiveIconDefault}}"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type controls:SystemMenu}">
@@ -10,6 +22,12 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+        <Style.Triggers>
+            <DataTrigger Value="False"
+                         Binding="{Binding IsActive, RelativeSource={RelativeSource AncestorType={x:Type Window}}}">
+                <Setter Property="VectorFill" Value="{DynamicResource {x:Static colors:WindowColors.MainWindowInactiveIconDefault}}"/>
+            </DataTrigger>
+        </Style.Triggers>
     </Style>
 
 </ResourceDictionary>
