--- a/src/CommonUtilities/CommonUtilities.WPF.Controls/Styles/ThemedWindowStyle.xaml
+++ b/src/CommonUtilities/CommonUtilities.WPF.Controls/Styles/ThemedWindowStyle.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:controls1="clr-namespace:AnakinRaW.CommonUtilities.Wpf.Controls"
+                    xmlns:controls="clr-namespace:AnakinRaW.CommonUtilities.Wpf.Controls"
                     xmlns:colors="clr-namespace:AnakinRaW.CommonUtilities.Wpf.Themes.Colors"
                     xmlns:fonts="clr-namespace:AnakinRaW.CommonUtilities.Wpf.Themes.Fonts"
                     xmlns:nativeMethods="clr-namespace:AnakinRaW.CommonUtilities.Wpf.NativeMethods"
@@ -12,7 +12,7 @@
         <ResourceDictionary Source="/AnakinRaW.CommonUtilities.WPF.Controls;component/Styles/ShadowChromeWindowStyle.xaml"/>
     </ResourceDictionary.MergedDictionaries>
     
-    <Style TargetType="{x:Type controls1:ThemedWindow}" BasedOn="{StaticResource {x:Type controls1:ShadowChromeWindow}}">
+    <Style TargetType="{x:Type controls:ThemedWindow}" BasedOn="{StaticResource {x:Type controls:ShadowChromeWindow}}">
         <Style.Resources>
             <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
             <converters:BrushToColorConverter x:Key="BrushToColorConverter"/>
@@ -43,7 +43,7 @@
                 Value="{DynamicResource {x:Static colors:WindowColors.MainWindowInactiveBorder}}"/>
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type controls1:ThemedWindow}">
+                <ControlTemplate TargetType="{x:Type controls:ThemedWindow}">
                     <AdornerDecorator>
                         <Border BorderBrush="{TemplateBinding Control.BorderBrush}"
                                 BorderThickness="{TemplateBinding Control.BorderThickness}"
@@ -54,7 +54,7 @@
                                     <RowDefinition Height="*"/>
                                     <RowDefinition Height="Auto"/>
                                 </Grid.RowDefinitions>
-                                <controls1:MainWindowTitleBar x:Name="MainWindowTitleBar" Grid.Row="0" Grid.Column="0"
+                                <controls:MainWindowTitleBar x:Name="MainWindowTitleBar" Grid.Row="0" Grid.Column="0"
                                                              Background="{DynamicResource {x:Static colors:WindowColors.MainWindowActiveCaption}}"
                                                              TextElement.Foreground="{DynamicResource {x:Static colors:WindowColors.MainWindowActiveCaptionText}}">
                                     <imaging:ImageThemingUtilities.ImageBackgroundColor>
@@ -68,29 +68,15 @@
                                                 <ColumnDefinition Width="*"/>
                                                 <ColumnDefinition Width="Auto" SharedSizeGroup="Buttons"/>
                                             </Grid.ColumnDefinitions>
-                                            <controls1:SystemMenu x:Name="SystemMenu" Source="{TemplateBinding Icon}"
-                                                                 VectorFill="{DynamicResource {x:Static colors:WindowColors.MainWindowActiveIconDefault}}"
-                                                                 Width="32" Height="32" Margin="12,7,0,0" Grid.Column="0" VerticalAlignment="Top">
-                                            </controls1:SystemMenu>
+                                            <controls:SystemMenu x:Name="SystemMenu" Grid.Column="0" Style="{DynamicResource {x:Static controls:SystemMenu.StyleKey}}"/>
                                             <TextBlock Text="{TemplateBinding Window.Title}"
                                                        FontSize="{DynamicResource {x:Static fonts:EnvironmentFonts.CaptionFontSizeKey}}"
                                                        FontFamily="{DynamicResource {x:Static fonts:EnvironmentFonts.CaptionFontFamilyKey}}"
                                                        TextTrimming="CharacterEllipsis" VerticalAlignment="Center" Margin="6,7,0,4" Grid.Column="1"/>
                                             <StackPanel Orientation="Horizontal" Grid.Column="2">
-                                                <controls1:WindowTitleBarButton x:Name="MinimizeButton" VerticalAlignment="Top"
+                                                <controls:WindowTitleBarButton x:Name="MinimizeButton"
                                                                                Command="{x:Static input:ViewCommands.MinimizeWindow}"
-                                                                               BorderBrush="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonActiveBorder}}"
-                                                                               BorderThickness="1,0,1,1" 
-                                                                               GlyphForeground="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonActiveGlyph}}"
-                                                                               HoverBackground="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonHoverActive}}"
-                                                                               HoverBorderBrush="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonHoverActiveBorder}}"
-                                                                               HoverForeground="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonHoverActiveGlyph}}"
-                                                                               HoverBorderThickness="1,0,1,1"
-                                                                               PressedBackground="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonDown}}"
-                                                                               PressedBorderBrush="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonDownBorder}}"
-                                                                               PressedForeground="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonDownGlyph}}"
-                                                                               PressedBorderThickness="1,0,1,1"
-                                                                               Padding="0,3,0,0" Width="46" Height="32"
+                                                                               Style="{DynamicResource {x:Static controls:WindowTitleBarButton.StyleKey}}"
                                                                                HitTestResult="{x:Static nativeMethods:HitTestConstants.HTMINBUTTON}">
                                                     <ButtonBase.CommandParameter>
                                                         <Binding RelativeSource="{RelativeSource TemplatedParent}"/>
@@ -103,21 +89,10 @@
                                                             <Binding Path="(TextElement.Foreground)" RelativeSource="{RelativeSource Self}"/>
                                                         </Shape.Fill>
                                                     </Path>
-                                                </controls1:WindowTitleBarButton>
-                                                <controls1:WindowTitleBarButton x:Name="MaximizeRestoreButton" VerticalAlignment="Top"
+                                                </controls:WindowTitleBarButton>
+                                                <controls:WindowTitleBarButton x:Name="MaximizeRestoreButton"
                                                                                Command="{x:Static input:ViewCommands.ToggleMaximizeRestoreWindow}"
-                                                                               BorderBrush="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonActiveBorder}}"
-                                                                               BorderThickness="1,0,1,1" 
-                                                                               GlyphForeground="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonActiveGlyph}}"
-                                                                               HoverBackground="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonHoverActive}}"
-                                                                               HoverBorderBrush="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonHoverActiveBorder}}"
-                                                                               HoverForeground="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonHoverActiveGlyph}}"
-                                                                               HoverBorderThickness="1,0,1,1"
-                                                                               PressedBackground="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonDown}}"
-                                                                               PressedBorderBrush="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonDownBorder}}"
-                                                                               PressedForeground="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonDownGlyph}}"
-                                                                               PressedBorderThickness="1,0,1,1"
-                                                                               Padding="0,3,0,0" Width="46" Height="32"
+                                                                               Style="{DynamicResource {x:Static controls:WindowTitleBarButton.StyleKey}}"
                                                                                HitTestResult="{x:Static nativeMethods:HitTestConstants.HTMAXBUTTON}">
                                                     <ButtonBase.CommandParameter>
                                                         <Binding RelativeSource="{RelativeSource TemplatedParent}"/>
@@ -131,21 +106,10 @@
                                                             <Binding Path="(TextElement.Foreground)" RelativeSource="{RelativeSource Self}"/>
                                                         </Shape.Fill>
                                                     </Path>
-                                                </controls1:WindowTitleBarButton>
-                                                <controls1:WindowTitleBarButton x:Name="CloseButton" VerticalAlignment="Top"
+                                                </controls:WindowTitleBarButton>
+                                                <controls:WindowTitleBarButton x:Name="CloseButton"
                                                                                Command="{x:Static input:ViewCommands.CloseWindow}"
-                                                                               BorderBrush="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonActiveBorder}}"
-                                                                               BorderThickness="1,0,1,1" 
-                                                                               GlyphForeground="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonActiveGlyph}}"
-                                                                               HoverBackground="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonHoverActive}}"
-                                                                               HoverBorderBrush="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonHoverActiveBorder}}"
-                                                                               HoverForeground="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonHoverActiveGlyph}}"
-                                                                               HoverBorderThickness="1,0,1,1"
-                                                                               PressedBackground="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonDown}}"
-                                                                               PressedBorderBrush="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonDownBorder}}"
-                                                                               PressedForeground="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonDownGlyph}}"
-                                                                               PressedBorderThickness="1,0,1,1"
-                                                                               Padding="0,3,0,0" Width="46" Height="32"
+                                                                               Style="{DynamicResource {x:Static controls:WindowTitleBarButton.StyleKey}}"
                                                                                HitTestResult="{x:Static nativeMethods:HitTestConstants.HTCLOSE}">
                                                     <ButtonBase.CommandParameter>
                                                         <Binding RelativeSource="{RelativeSource TemplatedParent}"/>
@@ -156,17 +120,17 @@
                                                             <Binding Path="(TextElement.Foreground)" RelativeSource="{RelativeSource Self}"/>
                                                         </Shape.Fill>
                                                     </Path>
-                                                </controls1:WindowTitleBarButton>
+                                                </controls:WindowTitleBarButton>
                                             </StackPanel>
                                         </Grid>
                                     </Grid>
-                                </controls1:MainWindowTitleBar>
+                                </controls:MainWindowTitleBar>
                                 <AdornerDecorator Grid.Row="1">
                                     <ContentPresenter/>
                                 </AdornerDecorator>
-                                <controls1:CustomResizeGrip Grid.Row="2" x:Name="ResizeGripControl" HorizontalAlignment="Right" Padding="0" Cursor="SizeNWSE"
+                                <controls:CustomResizeGrip Grid.Row="2" x:Name="ResizeGripControl" HorizontalAlignment="Right" Padding="0" Cursor="SizeNWSE"
                                                            VerticalAlignment="Bottom" Visibility="Collapsed">
-                                </controls1:CustomResizeGrip>
+                                </controls:CustomResizeGrip>
                             </Grid>
                         </Border>
                     </AdornerDecorator>
@@ -194,37 +158,7 @@
                             <Setter TargetName="MainWindowTitleBar" Value="{DynamicResource {x:Static colors:WindowColors.MainWindowInactiveCaptionText}}"
                                     Property="TextElement.Foreground"/>
                             <Setter TargetName="SystemMenu" Value="{DynamicResource {x:Static colors:WindowColors.MainWindowInactiveIconDefault}}" 
-                                    Property="controls1:SystemMenu.VectorFill"/>
-                            <Setter TargetName="MinimizeButton" Value="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonInactiveBorder}}" 
-                                    Property="Control.BorderBrush"/>
-                            <Setter TargetName="MinimizeButton" Value="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonInactiveGlyph}}" 
-                                    Property="controls1:GlyphButton.GlyphForeground"/>
-                            <Setter TargetName="MinimizeButton" Value="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonHoverInactive}}" 
-                                    Property="controls1:GlyphButton.HoverBackground"/>
-                            <Setter TargetName="MinimizeButton" Value="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonHoverInactiveBorder}}" 
-                                    Property="controls1:GlyphButton.HoverBorderBrush"/>
-                            <Setter TargetName="MinimizeButton" Value="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonHoverInactiveGlyph}}" 
-                                    Property="controls1:GlyphButton.HoverForeground"/>
-                            <Setter TargetName="MaximizeRestoreButton" Value="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonInactiveBorder}}"
-                                    Property="Control.BorderBrush"/>
-                            <Setter TargetName="MaximizeRestoreButton" Value="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonInactiveGlyph}}" 
-                                    Property="controls1:GlyphButton.GlyphForeground"/>
-                            <Setter TargetName="MaximizeRestoreButton" Value="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonHoverInactive}}" 
-                                    Property="controls1:GlyphButton.HoverBackground"/>
-                            <Setter TargetName="MaximizeRestoreButton" Value="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonHoverInactiveBorder}}" 
-                                    Property="controls1:GlyphButton.HoverBorderBrush"/>
-                            <Setter TargetName="MaximizeRestoreButton" Value="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonHoverInactiveGlyph}}" 
-                                    Property="controls1:GlyphButton.HoverForeground"/>
-                            <Setter TargetName="CloseButton" Value="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonInactiveBorder}}" 
-                                    Property="Control.BorderBrush"/>
-                            <Setter TargetName="CloseButton" Value="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonInactiveGlyph}}" 
-                                    Property="controls1:GlyphButton.GlyphForeground"/>
-                            <Setter TargetName="CloseButton" Value="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonHoverInactive}}" 
-                                    Property="controls1:GlyphButton.HoverBackground"/>
-                            <Setter TargetName="CloseButton" Value="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonHoverInactiveBorder}}" 
-                                    Property="controls1:GlyphButton.HoverBorderBrush"/>
-                            <Setter TargetName="CloseButton" Value="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonHoverInactiveGlyph}}"
-                                    Property="controls1:GlyphButton.HoverForeground"/>
+                                    Property="controls:SystemMenu.VectorFill"/>
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
