--- a/src/CommonUtilities/CommonUtilities.WPF.Controls/Styles/WindowTitleBarButtonStyle.xaml
+++ b/src/CommonUtilities/CommonUtilities.WPF.Controls/Styles/WindowTitleBarButtonStyle.xaml
@@ -1,12 +1,31 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:controls="clr-namespace:AnakinRaW.CommonUtilities.Wpf.Controls">
+                    xmlns:controls="clr-namespace:AnakinRaW.CommonUtilities.Wpf.Controls"
+                    xmlns:colors="clr-namespace:AnakinRaW.CommonUtilities.Wpf.Themes.Colors">
+
     <Style TargetType="{x:Type controls:WindowTitleBarButton}">
         <Setter Property="TextElement.Foreground" Value="{Binding Path=GlyphForeground, RelativeSource={RelativeSource Self}}"/>
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="SnapsToDevicePixels" Value="True"/>
         <Setter Property="Focusable" Value="False"/>
-        <Setter Property="Padding" Value="0,1,0,0"/>
+
+        <Setter Property="Width" Value="46"/>
+        <Setter Property="Height" Value="32"/>
+        <Setter Property="Padding" Value="0,3,0,0"/>
+        <Setter Property="VerticalAlignment" Value="Top"/>
+        <Setter Property="BorderThickness" Value="1,0,1,1"/>
+        <Setter Property="HoverBorderThickness" Value="1,0,1,1"/>
+        <Setter Property="PressedBorderThickness" Value="1,0,1,1"/>
+
+        <Setter Property="BorderBrush" Value="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonActiveBorder}}"/>
+        <Setter Property="GlyphForeground" Value="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonActiveGlyph}}"/>
+        <Setter Property="HoverBackground" Value="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonHoverActive}}"/>
+        <Setter Property="HoverBorderBrush" Value="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonHoverActiveBorder}}"/>
+        <Setter Property="HoverForeground" Value="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonHoverActiveGlyph}}"/>
+        <Setter Property="PressedBackground" Value="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonDown}}"/>
+        <Setter Property="PressedBorderBrush" Value="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonDownBorder}}"/>
+        <Setter Property="PressedForeground" Value="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonDownGlyph}}"/>
+
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type controls:WindowTitleBarButton}">
@@ -18,45 +37,59 @@
                         <ContentPresenter/>
                     </Border>
                     <ControlTemplate.Triggers>
-                        <Trigger Property="UIElement.IsMouseOver" Value="True">
-                            <Setter TargetName="PART_Border" Value="{Binding HoverBackground, RelativeSource={RelativeSource TemplatedParent}}" 
-                                    Property="Border.Background"/>
-                            <Setter TargetName="PART_Border" Value="{Binding HoverBorderBrush, RelativeSource={RelativeSource TemplatedParent}}" 
-                                    Property="Border.BorderBrush"/>
-                            <Setter TargetName="PART_Border" Value="{Binding HoverBorderThickness, RelativeSource={RelativeSource TemplatedParent}}" 
-                                    Property="Border.BorderThickness"/>
-                            <Setter Value="{Binding HoverForeground, RelativeSource={RelativeSource Self}}" Property="TextElement.Foreground"/>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="PART_Border" Property="Background" 
+                                    Value="{Binding HoverBackground, RelativeSource={RelativeSource TemplatedParent}}" />
+                            <Setter TargetName="PART_Border" Property="BorderBrush"
+                                    Value="{Binding HoverBorderBrush, RelativeSource={RelativeSource TemplatedParent}}" />
+                            <Setter TargetName="PART_Border" Property="BorderThickness"
+                                    Value="{Binding HoverBorderThickness, RelativeSource={RelativeSource TemplatedParent}}" />
+                            <Setter Property="TextElement.Foreground"
+                                    Value="{Binding HoverForeground, RelativeSource={RelativeSource Self}}"/>
                         </Trigger>
-                        <Trigger Property="controls:WindowTitleBarButton.IsNCMouseOver" Value="True">
-                            <Setter TargetName="PART_Border" Value="{Binding HoverBackground, RelativeSource={RelativeSource TemplatedParent}}"
-                                    Property="Border.Background"/>
-                            <Setter TargetName="PART_Border" Value="{Binding HoverBorderBrush, RelativeSource={RelativeSource TemplatedParent}}" 
-                                    Property="Border.BorderBrush"/>
-                            <Setter TargetName="PART_Border" Value="{Binding HoverBorderThickness, RelativeSource={RelativeSource TemplatedParent}}" 
-                                    Property="Border.BorderThickness"/>
-                            <Setter Value="{Binding HoverForeground, RelativeSource={RelativeSource Self}}" Property="TextElement.Foreground"/>
+                        <Trigger Property="IsNCMouseOver" Value="True">
+                            <Setter TargetName="PART_Border" Property="Background"
+                                    Value="{Binding HoverBackground, RelativeSource={RelativeSource TemplatedParent}}"/>
+                            <Setter TargetName="PART_Border" Property="BorderBrush"
+                                    Value="{Binding HoverBorderBrush, RelativeSource={RelativeSource TemplatedParent}}" />
+                            <Setter TargetName="PART_Border" Property="BorderThickness"
+                                    Value="{Binding HoverBorderThickness, RelativeSource={RelativeSource TemplatedParent}}" />
+                            <Setter Property="TextElement.Foreground"
+                                    Value="{Binding HoverForeground, RelativeSource={RelativeSource Self}}"/>
                         </Trigger>
-                        <Trigger Property="ButtonBase.IsPressed" Value="True">
-                            <Setter TargetName="PART_Border" Value="{Binding PressedBackground, RelativeSource={RelativeSource TemplatedParent}}" 
-                                    Property="Border.Background"/>
-                            <Setter TargetName="PART_Border" Value="{Binding PressedBorderBrush, RelativeSource={RelativeSource TemplatedParent}}" 
-                                    Property="Border.BorderBrush"/>
-                            <Setter TargetName="PART_Border" Value="{Binding PressedBorderThickness, RelativeSource={RelativeSource TemplatedParent}}" 
-                                    Property="Border.BorderThickness"/>
-                            <Setter Value="{Binding PressedForeground, RelativeSource={RelativeSource Self}}" Property="TextElement.Foreground"/>
+                        <Trigger Property="IsPressed" Value="True">
+                            <Setter TargetName="PART_Border" Property="Background"
+                                    Value="{Binding PressedBackground, RelativeSource={RelativeSource TemplatedParent}}" />
+                            <Setter TargetName="PART_Border" Property="BorderBrush" 
+                                    Value="{Binding PressedBorderBrush, RelativeSource={RelativeSource TemplatedParent}}" />
+                            <Setter TargetName="PART_Border" Property="BorderThickness" 
+                                    Value="{Binding PressedBorderThickness, RelativeSource={RelativeSource TemplatedParent}}" />
+                            <Setter Property="TextElement.Foreground"
+                                    Value="{Binding PressedForeground, RelativeSource={RelativeSource Self}}"/>
                         </Trigger>
-                        <Trigger Property="controls:WindowTitleBarButton.IsNCPressed" Value="True">
-                            <Setter TargetName="PART_Border" Value="{Binding PressedBackground, RelativeSource={RelativeSource TemplatedParent}}" 
-                                    Property="Border.Background"/>
-                            <Setter TargetName="PART_Border" Value="{Binding PressedBorderBrush, RelativeSource={RelativeSource TemplatedParent}}" 
-                                    Property="Border.BorderBrush"/>
-                            <Setter TargetName="PART_Border" Value="{Binding PressedBorderThickness, RelativeSource={RelativeSource TemplatedParent}}" 
-                                    Property="Border.BorderThickness"/>
-                            <Setter Value="{Binding PressedForeground, RelativeSource={RelativeSource Self}}" Property="TextElement.Foreground"/>
+                        <Trigger Property="IsNCPressed" Value="True">
+                            <Setter TargetName="PART_Border" Property="Background"
+                                    Value="{Binding PressedBackground, RelativeSource={RelativeSource TemplatedParent}}" />
+                            <Setter TargetName="PART_Border" Property="BorderBrush"
+                                    Value="{Binding PressedBorderBrush, RelativeSource={RelativeSource TemplatedParent}}" />
+                            <Setter TargetName="PART_Border" Property="BorderThickness"
+                                    Value="{Binding PressedBorderThickness, RelativeSource={RelativeSource TemplatedParent}}" />
+                            <Setter Property="TextElement.Foreground"
+                                    Value="{Binding PressedForeground, RelativeSource={RelativeSource Self}}"/>
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+        <Style.Triggers>
+            <DataTrigger Value="False"
+                         Binding="{Binding IsActive, RelativeSource={RelativeSource AncestorType={x:Type Window}}}">
+                <Setter Property="Border.BorderBrush" Value="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonInactiveBorder}}"/>
+                <Setter Property="GlyphForeground" Value="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonInactiveGlyph}}"/>
+                <Setter Property="HoverBackground" Value="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonHoverInactive}}"/>
+                <Setter Property="HoverBorderBrush" Value="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonHoverInactiveBorder}}"/>
+                <Setter Property="HoverForeground" Value="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonHoverInactiveGlyph}}"/>
+            </DataTrigger>
+        </Style.Triggers>
     </Style>
 </ResourceDictionary>
