start contextmenu fluent theming

--- a/src/CommonUtilities/CommonUtilities.WPF.Controls.Styles.Fluent/FluentStyle.xaml
+++ b/src/CommonUtilities/CommonUtilities.WPF.Controls.Styles.Fluent/FluentStyle.xaml
@@ -3,6 +3,7 @@
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/AnakinRaW.CommonUtilities.WPF.Controls.Styles.Fluent;component/Styles/WindowTitleBarButtonStyle.xaml"/>
         <ResourceDictionary Source="/AnakinRaW.CommonUtilities.WPF.Controls.Styles.Fluent;component/Styles/SystemMenuStyle.xaml"/>
+        <ResourceDictionary Source="/AnakinRaW.CommonUtilities.WPF.Controls.Styles.Fluent;component/Styles/ContextMenuStyle.xaml"/>
     </ResourceDictionary.MergedDictionaries>
     
 </ResourceDictionary>
