--- a/src/CommonUtilities/CommonUtilities.WPF.Controls.Styles.Fluent/Themes/FluentDark.xaml
+++ b/src/CommonUtilities/CommonUtilities.WPF.Controls.Styles.Fluent/Themes/FluentDark.xaml
@@ -10,4 +10,13 @@
 
     <SolidColorBrush x:Key="{x:Static themes:FluentColors.AccentFillDefault}" Color="#FF007ACC"/>
 
+    <SolidColorBrush x:Key="{x:Static themes:FluentColors.SolidBackgroundFillTertiary}" Color="#FF292929"/>
+    <SolidColorBrush x:Key="{x:Static themes:FluentColors.SolidBackgroundFillSecondary}" Color="#FF1F1F1F"/>
+
+    <Color x:Key="{x:Static themes:FluentColors.FocusStrokeOuter}" A="FF" B="FF" G="FF" R="FF"/>
+    <Color x:Key="{x:Static themes:FluentColors.PopupShadow}" A="42" B="00" G="00" R="00"/>
+
+    <SolidColorBrush x:Key="{x:Static themes:FluentColors.TextFillDisabled}" Color="#FF707070"/>
+    <SolidColorBrush x:Key="{x:Static themes:FluentColors.PopupBorder}" Color="#FF1F1F1F"/>
+
 </ResourceDictionary>
