--- a/src/CommonUtilities/CommonUtilities.WPF.Controls/Styles/ThemedContextMenuStyle.xaml
+++ b/src/CommonUtilities/CommonUtilities.WPF.Controls/Styles/ThemedContextMenuStyle.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:theming="clr-namespace:AnakinRaW.CommonUtilities.Wpf.Themes"
                     xmlns:colors="clr-namespace:AnakinRaW.CommonUtilities.Wpf.Themes.Colors"
-                    xmlns:controls1="clr-namespace:AnakinRaW.CommonUtilities.Wpf.Controls"
+                    xmlns:controls="clr-namespace:AnakinRaW.CommonUtilities.Wpf.Controls"
                     xmlns:converters="clr-namespace:AnakinRaW.CommonUtilities.Wpf.Converters;assembly=AnakinRaW.CommonUtilities.WPF.Core"
                     xmlns:dpi="clr-namespace:AnakinRaW.CommonUtilities.Wpf.DPI;assembly=AnakinRaW.CommonUtilities.WPF.Core">
 
@@ -69,7 +69,7 @@
         </Setter>
     </Style>
 
-    <Style TargetType="{x:Type controls1:ThemedMenuScrollViewer}">
+    <Style TargetType="{x:Type controls:ThemedMenuScrollViewer}">
         <Setter Property="HorizontalScrollBarVisibility" Value="Hidden"/>
         <Setter Property="VerticalScrollBarVisibility" Value="Auto"/>
         <Setter Property="Template">
@@ -105,7 +105,7 @@
                             <ScrollContentPresenter Margin="{TemplateBinding Control.Padding}" 
                                                     CanContentScroll="{TemplateBinding ScrollViewer.CanContentScroll}"/>
                         </Border>
-                        <controls1:RoutedCommandRepeatButton x:Name="ScrollUpButton" Grid.Row="0" Grid.Column="0"
+                        <controls:RoutedCommandRepeatButton x:Name="ScrollUpButton" Grid.Row="0" Grid.Column="0"
                                                             Command="{x:Static ScrollBar.LineUpCommand}" Focusable="false">
                             <ButtonBase.CommandTarget>
                                 <Binding RelativeSource="{RelativeSource TemplatedParent}"/>
@@ -121,8 +121,8 @@
                                 </MultiBinding>
                             </UIElement.Visibility>
                             <Path x:Name="ScrollUpArrow" Fill="{DynamicResource {x:Static colors:CommandBarColors.CommandBarMenuScrollGlyph}}" Data="{StaticResource UpArrowGeometry}"/>
-                        </controls1:RoutedCommandRepeatButton>
-                        <controls1:RoutedCommandRepeatButton x:Name="ScrollDownButton" Grid.Row="2" Grid.Column="0"
+                        </controls:RoutedCommandRepeatButton>
+                        <controls:RoutedCommandRepeatButton x:Name="ScrollDownButton" Grid.Row="2" Grid.Column="0"
                                                             Command="{x:Static ScrollBar.LineDownCommand}" Focusable="false">
                             <ButtonBase.CommandTarget>
                                 <Binding RelativeSource="{RelativeSource TemplatedParent}"/>
@@ -138,17 +138,17 @@
                                 </MultiBinding>
                             </UIElement.Visibility>
                             <Path x:Name="ScrollDownArrow" Fill="{DynamicResource {x:Static colors:CommandBarColors.CommandBarMenuScrollGlyph}}" Data="{StaticResource DownArrowGeometry}"/>
-                        </controls1:RoutedCommandRepeatButton>
+                        </controls:RoutedCommandRepeatButton>
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
     </Style>
 
-    <Style TargetType="{x:Type controls1:ThemedMenuItem}" BasedOn="{StaticResource {x:Type MenuItem}}">
+    <Style TargetType="{x:Type controls:ThemedMenuItem}" BasedOn="{StaticResource {x:Type MenuItem}}">
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type controls1:ThemedMenuItem}">
+                <ControlTemplate TargetType="{x:Type controls:ThemedMenuItem}">
                     <Grid SnapsToDevicePixels="true" Background="Transparent" MinHeight="22">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="{StaticResource MenuItemIconWidth}"/>
@@ -196,16 +196,17 @@
         </Setter>
     </Style>
 
-    <Style TargetType="{x:Type controls1:ThemedContextMenu}" BasedOn="{StaticResource {x:Type ContextMenu}}">
+    <Style TargetType="{x:Type controls:ThemedContextMenu}" BasedOn="{StaticResource {x:Type ContextMenu}}">
         <Setter Property="SnapsToDevicePixels" Value="True"/>
         <Setter Property="TextElement.Foreground" Value="{DynamicResource {x:Static colors:CommandBarColors.CommandBarTextActive}}"/>
+        <Setter Property="TextOptions.TextFormattingMode" Value="Display"/>
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type controls1:ThemedContextMenu}">
-                    <controls1:SystemDropShadowChrome x:Name="Shadow" Margin="0,0,5,5" 
+                <ControlTemplate TargetType="{x:Type controls:ThemedContextMenu}">
+                    <controls:SystemDropShadowChrome x:Name="Shadow" Margin="0,0,5,5" 
                                                          Color="{DynamicResource {x:Static colors:CommandBarColors.DropShadowBackgroundColor}}">
                         <Grid Background="{DynamicResource {x:Static colors:CommandBarColors.CommandBarMenuIconBackground}}">
-                            <controls1:ThemedMenuScrollViewer>
+                            <controls:ThemedMenuScrollViewer>
                                 <Grid RenderOptions.ClearTypeHint="Enabled" 
                                       RenderOptions.BitmapScalingMode="{x:Static dpi:DpiHelper.BitmapScalingMode}"
                                       Background="{DynamicResource {x:Static colors:CommandBarColors.CommandBarMenuBackground}}">
@@ -216,17 +217,17 @@
                                                     Margin="3" Grid.IsSharedSizeScope="true"
                                                     SnapsToDevicePixels="{TemplateBinding UIElement.SnapsToDevicePixels}" />
                                 </Grid>
-                            </controls1:ThemedMenuScrollViewer>
+                            </controls:ThemedMenuScrollViewer>
                             <Border BorderThickness="1" 
                                     BorderBrush="{DynamicResource {x:Static colors:CommandBarColors.CommandBarMenuBorder}}"/>
                         </Grid>
-                    </controls1:SystemDropShadowChrome>
+                    </controls:SystemDropShadowChrome>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
     </Style>
 
-    <Style TargetType="{x:Type controls1:ThemedSeparator}">
+    <Style TargetType="{x:Type controls:ThemedSeparator}">
         <Setter Property="Focusable" Value="False"/>
         <Setter Property="Template">
             <Setter.Value>
