--- a/src/CommonUtilities/CommonUtilities.WPF.Controls/Styles/SystemMenuStyle.xaml
+++ b/src/CommonUtilities/CommonUtilities.WPF.Controls/Styles/SystemMenuStyle.xaml
@@ -1,19 +1,18 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:controls="clr-namespace:AnakinRaW.CommonUtilities.Wpf.Controls"
-                    xmlns:colors="clr-namespace:AnakinRaW.CommonUtilities.Wpf.Themes.Colors">
+                    xmlns:colors="clr-namespace:AnakinRaW.CommonUtilities.Wpf.Themes.Colors"
+                    xmlns:styles="clr-namespace:AnakinRaW.CommonUtilities.Wpf.Styles">
 
     <Style TargetType="{x:Type controls:SystemMenu}">
-        <Setter Property="Width" Value="34"/>
-        <Setter Property="Height" Value="32"/>
-        <Setter Property="Padding" Value="12,6,2,6"/>
-        <Setter Property="Source" Value="{Binding Icon, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"/>
-        <Setter Property="VectorIcon">
-            <Setter.Value>
-                <Binding Source="{x:Static Application.Current}" Path="VectorIcon"/>
-            </Setter.Value>
-        </Setter>
+        <Setter Property="Height" Value="{x:Static styles:StyleConstants.NonClientHeight}"/>
+        <Setter Property="Padding" Value="{x:Static styles:StyleConstants.SystemMenuPadding}"/>
         <Setter Property="VerticalAlignment" Value="Top"/>
+        <Setter Property="Width" Value="28"/>
+        <Setter Property="Source"
+                Value="{Binding Icon, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"/>
+        <Setter Property="VectorIcon"
+                Value="{Binding Source={x:Static Application.Current}, Path=VectorIcon}"/>
         <Setter Property="VectorFill" Value="{DynamicResource {x:Static colors:WindowColors.MainWindowActiveIconDefault}}"/>
         <Setter Property="Template">
             <Setter.Value>
