--- a/src/CommonUtilities/CommonUtilities.WPF.Controls/Styles/WindowTitleBarButtonStyle.xaml
+++ b/src/CommonUtilities/CommonUtilities.WPF.Controls/Styles/WindowTitleBarButtonStyle.xaml
@@ -1,21 +1,25 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:controls="clr-namespace:AnakinRaW.CommonUtilities.Wpf.Controls"
-                    xmlns:colors="clr-namespace:AnakinRaW.CommonUtilities.Wpf.Themes.Colors">
+                    xmlns:colors="clr-namespace:AnakinRaW.CommonUtilities.Wpf.Themes.Colors"
+                    xmlns:styles="clr-namespace:AnakinRaW.CommonUtilities.Wpf.Styles">
 
     <Style TargetType="{x:Type controls:WindowTitleBarButton}">
         <Setter Property="TextElement.Foreground" Value="{Binding Path=GlyphForeground, RelativeSource={RelativeSource Self}}"/>
+
+        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="HoverBorderThickness" Value="0"/>
+        <Setter Property="PressedBorderThickness" Value="0"/>
+
+        <Setter Property="VerticalAlignment" Value="Top"/>
+        <Setter Property="Padding" Value="0,1,0,0"/>
+
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="SnapsToDevicePixels" Value="True"/>
         <Setter Property="Focusable" Value="False"/>
 
-        <Setter Property="Width" Value="46"/>
-        <Setter Property="Height" Value="32"/>
-        <Setter Property="Padding" Value="0,3,0,0"/>
-        <Setter Property="VerticalAlignment" Value="Top"/>
-        <Setter Property="BorderThickness" Value="1,0,1,1"/>
-        <Setter Property="HoverBorderThickness" Value="1,0,1,1"/>
-        <Setter Property="PressedBorderThickness" Value="1,0,1,1"/>
+        <Setter Property="Height" Value="{x:Static styles:StyleConstants.NonClientHeight}"/>
+        <Setter Property="Width" Value="44"/>
 
         <Setter Property="BorderBrush" Value="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonActiveBorder}}"/>
         <Setter Property="GlyphForeground" Value="{DynamicResource {x:Static colors:WindowColors.MainWindowButtonActiveGlyph}}"/>
